Plugins/UnrealDotNet/Source/UnrealDotNetRuntime/Public/Generate/Export/UActorComponent.h

	DOTNET_EXPORT auto E_UActorComponent_HasBegunPlay(UActorComponent* Self)
	{
		return Self->HasBegunPlay();
	}
	DOTNET_EXPORT auto E_UActorComponent_HasValidPhysicsState(UActorComponent* Self)
	{
		return ((E_PROTECTED_WRAP_UActorComponent*)Self)->HasValidPhysicsState_WRAP();
	}
	DOTNET_EXPORT auto E_UActorComponent_InitializeComponent(UActorComponent* Self)
	{
		Self->InitializeComponent();
	}
	DOTNET_EXPORT auto E_UActorComponent_InvalidateLightingCache(UActorComponent* Self)
	{
		Self->InvalidateLightingCache();
	}
	DOTNET_EXPORT auto E_UActorComponent_InvalidateLightingCacheDetailed(UActorComponent* Self, bool bInvalidateBuildEnqueuedLighting, bool bTranslationOnly)
	{
		auto _p0 = bInvalidateBuildEnqueuedLighting;
		auto _p1 = bTranslationOnly;
		Self->InvalidateLightingCacheDetailed(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UActorComponent_IsActive(UActorComponent* Self)
	{
		return Self->IsActive();
	}
	DOTNET_EXPORT auto E_UActorComponent_IsBeingDestroyed(UActorComponent* Self)
	{
		return Self->IsBeingDestroyed();
	}
	DOTNET_EXPORT auto E_UActorComponent_IsComponentTickEnabled(UActorComponent* Self)
	{
		return Self->IsComponentTickEnabled();
	}
	DOTNET_EXPORT auto E_UActorComponent_IsCreatedByConstructionScript(UActorComponent* Self)
	{
		return Self->IsCreatedByConstructionScript();
	}
	DOTNET_EXPORT auto E_UActorComponent_IsEditableWhenInherited(UActorComponent* Self)
	{
		return Self->IsEditableWhenInherited();
	}
	DOTNET_EXPORT auto E_UActorComponent_IsNavigationRelevant(UActorComponent* Self)
	{
		return Self->IsNavigationRelevant();
	}
	DOTNET_EXPORT auto E_UActorComponent_IsNetMode(UActorComponent* Self, ENetMode Mode)
	{
		auto _p0 = Mode;
		return Self->IsNetMode(_p0);
	}
	DOTNET_EXPORT auto E_UActorComponent_IsNetSimulating(UActorComponent* Self)
	{
		return Self->IsNetSimulating();
	}
	DOTNET_EXPORT auto E_UActorComponent_IsNetStartupComponent(UActorComponent* Self)
	{
		return Self->IsNetStartupComponent();
	}
	DOTNET_EXPORT auto E_UActorComponent_IsOwnerRunningUserConstructionScript(UActorComponent* Self)
	{
		return Self->IsOwnerRunningUserConstructionScript();
	}
	DOTNET_EXPORT auto E_UActorComponent_IsOwnerSelected(UActorComponent* Self)
	{
		return Self->IsOwnerSelected();
	}
	DOTNET_EXPORT auto E_UActorComponent_IsPhysicsStateCreated(UActorComponent* Self)
	{
		return Self->IsPhysicsStateCreated();
	}
	DOTNET_EXPORT auto E_UActorComponent_IsReadyForOwnerToAutoDestroy(UActorComponent* Self)
	{
		return Self->IsReadyForOwnerToAutoDestroy();
	}
	DOTNET_EXPORT auto E_UActorComponent_IsRegistered(UActorComponent* Self)
	{
		return Self->IsRegistered();
	}
	DOTNET_EXPORT auto E_UActorComponent_IsRenderStateCreated(UActorComponent* Self)
	{
		return Self->IsRenderStateCreated();
	}
	DOTNET_EXPORT auto E_UActorComponent_IsRenderStateDirty(UActorComponent* Self)
	{
		return Self->IsRenderStateDirty();
	}
	DOTNET_EXPORT auto E_UActorComponent_IsRenderTransformDirty(UActorComponent* Self)
	{
		return Self->IsRenderTransformDirty();
	}
	DOTNET_EXPORT auto E_UActorComponent_K2_DestroyComponent(UActorComponent* Self, UObject* Object)
	{
		auto _p0 = Object;
		Self->K2_DestroyComponent(_p0);
	}
	DOTNET_EXPORT auto E_UActorComponent_MarkForNeededEndOfFrameRecreate(UActorComponent* Self)
	{
		Self->MarkForNeededEndOfFrameRecreate();
	}
	DOTNET_EXPORT auto E_UActorComponent_MarkForNeededEndOfFrameUpdate(UActorComponent* Self)
	{
		Self->MarkForNeededEndOfFrameUpdate();
	}
	DOTNET_EXPORT auto E_UActorComponent_MarkRenderDynamicDataDirty(UActorComponent* Self)
	{
		Self->MarkRenderDynamicDataDirty();
	}
	DOTNET_EXPORT auto E_UActorComponent_MarkRenderStateDirty(UActorComponent* Self)
	{
		Self->MarkRenderStateDirty();
	}
	DOTNET_EXPORT auto E_UActorComponent_MarkRenderTransformDirty(UActorComponent* Self)
	{
		Self->MarkRenderTransformDirty();
	}
	DOTNET_EXPORT auto E_UActorComponent_OnActorEnableCollisionChanged(UActorComponent* Self)
	{
		Self->OnActorEnableCollisionChanged();
	}
	DOTNET_EXPORT auto E_UActorComponent_OnComponentCreated(UActorComponent* Self)
	{
		Self->OnComponentCreated();
	}
	DOTNET_EXPORT auto E_UActorComponent_OnComponentDestroyed(UActorComponent* Self, bool bDestroyingHierarchy)
	{
		auto _p0 = bDestroyingHierarchy;
		Self->OnComponentDestroyed(_p0);
	}
	DOTNET_EXPORT auto E_UActorComponent_OnCreatePhysicsState(UActorComponent* Self)
	{
		((E_PROTECTED_WRAP_UActorComponent*)Self)->OnCreatePhysicsState_WRAP();
	}
	DOTNET_EXPORT auto E_UActorComponent_OnDestroyPhysicsState(UActorComponent* Self)
	{
		((E_PROTECTED_WRAP_UActorComponent*)Self)->OnDestroyPhysicsState_WRAP();
	}
	DOTNET_EXPORT auto E_UActorComponent_OnRegister(UActorComponent* Self)
	{
		((E_PROTECTED_WRAP_UActorComponent*)Self)->OnRegister_WRAP();
	}
	DOTNET_EXPORT auto E_UActorComponent_OnRep_IsActive(UActorComponent* Self)
	{
		Self->OnRep_IsActive();
	}
	DOTNET_EXPORT auto E_UActorComponent_OnUnregister(UActorComponent* Self)
	{
		((E_PROTECTED_WRAP_UActorComponent*)Self)->OnUnregister_WRAP();
	}
	DOTNET_EXPORT auto E_UActorComponent_ReceiveBeginPlay(UActorComponent* Self)
	{
		Self->ReceiveBeginPlay();
	}
	DOTNET_EXPORT auto E_UActorComponent_ReceiveTick(UActorComponent* Self, float DeltaSeconds)
	{
		auto _p0 = DeltaSeconds;
		Self->ReceiveTick(_p0);
	}
	DOTNET_EXPORT auto E_UActorComponent_RecreatePhysicsState(UActorComponent* Self)
	{
		Self->RecreatePhysicsState();
	}
	DOTNET_EXPORT auto E_UActorComponent_RecreateRenderState_Concurrent(UActorComponent* Self)
	{
		Self->RecreateRenderState_Concurrent();
	}
	DOTNET_EXPORT auto E_UActorComponent_RegisterAllComponentTickFunctions(UActorComponent* Self, bool bRegister)
	{
		auto _p0 = bRegister;
		Self->RegisterAllComponentTickFunctions(_p0);
	}
	DOTNET_EXPORT auto E_UActorComponent_RegisterComponent(UActorComponent* Self)
	{
		Self->RegisterComponent();
	}
	DOTNET_EXPORT auto E_UActorComponent_RegisterComponentTickFunctions(UActorComponent* Self, bool bRegister)
	{
		auto _p0 = bRegister;
		((E_PROTECTED_WRAP_UActorComponent*)Self)->RegisterComponentTickFunctions_WRAP(_p0);
	}
	DOTNET_EXPORT auto E_UActorComponent_RemoveTickPrerequisiteActor(UActorComponent* Self, AActor* PrerequisiteActor)
	{
		auto _p0 = PrerequisiteActor;
		Self->RemoveTickPrerequisiteActor(_p0);
	}
	DOTNET_EXPORT auto E_UActorComponent_RemoveTickPrerequisiteComponent(UActorComponent* Self, UActorComponent* PrerequisiteComponent)
	{
		auto _p0 = PrerequisiteComponent;
		Self->RemoveTickPrerequisiteComponent(_p0);
	}
	DOTNET_EXPORT auto E_UActorComponent_RequiresGameThreadEndOfFrameRecreate(UActorComponent* Self)
	{
		return Self->RequiresGameThreadEndOfFrameRecreate();
	}
	DOTNET_EXPORT auto E_UActorComponent_RequiresGameThreadEndOfFrameUpdates(UActorComponent* Self)
	{
		return Self->RequiresGameThreadEndOfFrameUpdates();
	}
	DOTNET_EXPORT auto E_UActorComponent_ReregisterComponent(UActorComponent* Self)
	{
		Self->ReregisterComponent();
	}
	DOTNET_EXPORT auto E_UActorComponent_SendRenderDynamicData_Concurrent(UActorComponent* Self)
	{
		((E_PROTECTED_WRAP_UActorComponent*)Self)->SendRenderDynamicData_Concurrent_WRAP();
	}
	DOTNET_EXPORT auto E_UActorComponent_SendRenderTransform_Concurrent(UActorComponent* Self)
	{
		((E_PROTECTED_WRAP_UActorComponent*)Self)->SendRenderTransform_Concurrent_WRAP();
	}
	DOTNET_EXPORT auto E_UActorComponent_SetActive(UActorComponent* Self, bool bNewActive, bool bReset)
	{
		auto _p0 = bNewActive;
		auto _p1 = bReset;
		Self->SetActive(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UActorComponent_SetAutoActivate(UActorComponent* Self, bool bNewAutoActivate)
	{
		auto _p0 = bNewAutoActivate;
		Self->SetAutoActivate(_p0);
	}
	DOTNET_EXPORT auto E_UActorComponent_SetCanEverAffectNavigation(UActorComponent* Self, bool bRelevant)
	{
		auto _p0 = bRelevant;
		Self->SetCanEverAffectNavigation(_p0);
	}
	DOTNET_EXPORT auto E_UActorComponent_SetComponentTickEnabled(UActorComponent* Self, bool bEnabled)
	{
		auto _p0 = bEnabled;
		Self->SetComponentTickEnabled(_p0);
	}
	DOTNET_EXPORT auto E_UActorComponent_SetComponentTickEnabledAsync(UActorComponent* Self, bool bEnabled)
	{
		auto _p0 = bEnabled;
		Self->SetComponentTickEnabledAsync(_p0);
	}
	DOTNET_EXPORT auto E_UActorComponent_SetComponentTickInterval(UActorComponent* Self, float TickInterval)
	{
		auto _p0 = TickInterval;
		Self->SetComponentTickInterval(_p0);
	}
	DOTNET_EXPORT auto E_UActorComponent_SetIsNetStartupComponent(UActorComponent* Self, bool bInIsNetStartupComponent)
	{
		auto _p0 = bInIsNetStartupComponent;
		Self->SetIsNetStartupComponent(_p0);
	}
	DOTNET_EXPORT auto E_UActorComponent_SetIsReplicated(UActorComponent* Self, bool ShouldReplicate)
	{
		auto _p0 = ShouldReplicate;
		Self->SetIsReplicated(_p0);
	}
	DOTNET_EXPORT auto E_UActorComponent_SetNetAddressable(UActorComponent* Self)
	{
		Self->SetNetAddressable();
	}
	DOTNET_EXPORT auto E_UActorComponent_SetTickableWhenPaused(UActorComponent* Self, bool bTickableWhenPaused)
	{
		auto _p0 = bTickableWhenPaused;
		Self->SetTickableWhenPaused(_p0);
	}
	DOTNET_EXPORT auto E_UActorComponent_SetTickGroup(UActorComponent* Self, ETickingGroup NewTickGroup)
	{
		auto _p0 = NewTickGroup;
		Self->SetTickGroup(_p0);
	}
	DOTNET_EXPORT auto E_UActorComponent_ShouldActivate(UActorComponent* Self)
	{
		return ((E_PROTECTED_WRAP_UActorComponent*)Self)->ShouldActivate_WRAP();
	}
	DOTNET_EXPORT auto E_UActorComponent_ShouldCreatePhysicsState(UActorComponent* Self)
	{
		return ((E_PROTECTED_WRAP_UActorComponent*)Self)->ShouldCreatePhysicsState_WRAP();
	}
	DOTNET_EXPORT auto E_UActorComponent_ShouldCreateRenderState(UActorComponent* Self)
	{
		return ((E_PROTECTED_WRAP_UActorComponent*)Self)->ShouldCreateRenderState_WRAP();
	}